# ori3dta

./: .env.template  .gitignore  README.md  eslint.config.mjs  lint.sh  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.mjs  vite.config.ts
.github/workflows/: lint.yml
client/: .env.template  index.html  tsconfig.json
client/src/: client-socket.ts  draw.ts  index.css  index.jsx  index.tsx  utilities.ts
client/src/components/: App.tsx
client/src/components/modules/: CPCanvas.css  CPCanvas.tsx  DesignCard.css  DesignCard.tsx  LandingNavbar.css  LandingNavbar.tsx  Navbar.css  Navbar.tsx  Viewer3D.tsx
client/src/components/pages/: Docs.css  Docs.tsx  Editor.css  Editor.jsx  Editor.tsx  Landing.css  Landing.tsx  Library.css  Library.tsx  Login.css  Login.tsx  NotFound.css  NotFound.tsx
client/src/types/: fold.ts  types.ts
client/src/utils/: cpEdit.ts  float.ts  kawasaki.ts  matrices.ts  xray.ts
client/utils/: cpEdit.ts  float.ts  kawasaki.ts  matrices.ts  parseFold.ts  square.fold  xray.ts
dto/: dto.ts
fold_algos/: CMakeLists.txt  fold.h  test.cpp
fold_algos/include/: dsu.h  fold.h  hash_tuple.h  layer_solver.h  plane_arrangement.h  plane_group.h  solver.h  vec_math.h
fold_algos/src/: .plane_group.cpp.swp  dsu.cpp  fold.cpp  layer_solver.cpp  main.cpp  main_plane_arrangement.cpp  plane_arrangement.cpp  plane_group.cpp  test.cpp  test_plane_group.cpp
server/: api.ts  auth.js  auth.ts  layersolver.ts  server-socket.ts  server.js  server.ts  tsconfig.json  validator.ts
server/models/: cp.ts  designMetadata.ts  user.ts
server/types/: fold.ts  types.ts
test_files/: 3d demo edited.fold  3d_not_foldable.fold  3dfoldable.fold  crane.fold  crane_cp.fold  turtle unedited.fold
